Fix off-center card images
When the page shrinks, subsequently the card width shrinks, so remove minimum width settings, which are driving the images to be off-center.

--- a/Client/Components/MemberCard.razor.css
+++ b/Client/Components/MemberCard.razor.css
@@ -1,8 +1,6 @@
 ﻿::deep .img-blur-wrap {
     position: relative;
     overflow: hidden;
-    min-width: 250px;
-    max-width: 250px;
     width: 100%;
     min-height: 250px;
     max-height: 250px;
@@ -12,13 +10,12 @@
 ::deep .img-blur {
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     filter: none;
     z-index: 2;
     position: relative;
-    min-width: 250px;
-    max-width: 250px;
     width: 100%;
+    max-width: 250px;
     height: 250px;
     margin: 0 auto;
     box-shadow: 0px 20px 40px #000;
@@ -41,7 +38,8 @@
     background-size: cover;
     filter: blur(5px);
     width: 100%;
-    height: 250px;
+    height: 100%;
+    max-height: 250px;
     position: absolute;
     z-index: 1;
 }
